# Hazard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  clean_build.sh  debug.sh  run.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/config/: config.json
src/: Main.cpp
src/engine/: Config.cpp  Config.h  EventDispatcher.cpp  EventDispatcher.h  Game.cpp  Game.h  Log.cpp  ShaderProgram.h  Vertex.hpp
src/engine/event/: Event.cpp  Event.h  EventDispatcher.cpp  EventDispatcher.h  EventListener.h  GameStartEvent.cpp  GameStartEvent.h
src/game/: Hazard.cpp  Hazard.h
src/game/state/: IdleGameState.cpp  IdleGameState.h
